infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: udpt
  labels:
    app.kubernetes.io/part-of: udpt
